WP7: the slice closes — connector out, barrier out, the visit's fact, and a demo that ran
CONNECTOR (runtime.integration, its first classes). RestConnector with a
per-connector deadline, a Resilience4j circuit breaker and a bulkhead, used
programmatically rather than through the annotations: a breaker that opens is a
routing decision the process has to see, and an aspect that throws from around a
method makes that decision invisible at the call site. Endpoint, deadline and
HTTP-status-to-branch routing are all rows (V102) — a site that wants 409 to
mean something adds a row, it does not get code changed. A status nothing maps
becomes HTTP_<status>, which no branch matches, so the default flow takes it to
a human: an answer nobody wrote a branch for must never become an approval.

ConnectorPort MOVED to runtime.integration.api. WP4 put it in execution.domain
because integration was empty; now it is not, and ModuleWallRule is right to
forbid the cross-module reach into another module's domain. ImportedSetGuard
failed the build naming the module, which is exactly what it is for.

COMMAND (edge). §C3's /internal/commands/v1 and its read-back, contract-first.
commandId is the idempotency key, edge.command_log records the outcome and the
device's own words, and an EXPIRED COMMAND IS DISCARDED — checked at the last
moment before the physical act, not only by the caller. It answers FAILED and
not UNKNOWN, because UNKNOWN means nobody knows whether the device acted and
here everybody knows: nothing was sent. Proven with the device host counting
ZERO calls.

Runtime's side maps a transport failure to UNKNOWN, never FAILED — edge may
already have raised the barrier, and saying FAILED would state as fact that a
physical thing did not happen when it may have.

COMPLETION. An engine event listener on ACTIVITY_COMPLETED, not a third service
task: completion is platform behaviour, and making it a service task would
require every process an administrator ever designs to end with one